--- a/css/style.css
+++ b/css/style.css
@@ -115,11 +115,18 @@ h2 {
   align-items: center;
 }
 
-.canvas {
+.canvas-wrapper {
   width: 100vw;
   height: 100vh;
   max-width: 800px;
   max-height: 500px;
+  position: relative;
+  border: orange 4px solid;
+}
+
+.canvas {
+  width: 100%;
+  height: 100%;
   background-color: black;
 }
 
@@ -306,6 +313,53 @@ h2 {
 .arrow-back img {
   filter: invert(66%) sepia(68%) saturate(454%) hue-rotate(358deg)
     brightness(92%) contrast(92%);
+}
+
+.game-buttons {
+  height: 64px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: blue 2px solid;
+}
+
+.canvas-sound-button-wrapper img {
+  height: 32px;
+}
+
+.mobile-buttons {
+  height: 64px;
+  padding-inline: 16px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.left-mobile-buttons-wrapper,
+.right-mobile-buttons-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+
+.left-mobile-buttons-wrapper img,
+.right-mobile-buttons-wrapper img {
+  height: 40px;
+}
+
+.arrow-left,
+.arrow-right,
+.arrow-up {
+  filter: invert(1);
 }
 
 .rotate-screen {
